<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/surround_bus_background"
    >
    <RelativeLayout
        style="@style/actionbar_default">
        <ImageView
            android:id="@+id/iv_back"
            style="@style/actionbar_left"
            android:src="@drawable/btn_actionbar_back"/>
        <TextView
            style="@style/actionbar_title"
            android:text="@string/bus_line_detail_title"/>
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/default_padding"
            android:paddingTop="@dimen/default_padding"
            android:layout_marginTop="@dimen/default_padding"
            android:background="@color/white"
            android:orientation="vertical"
            >
            <TextView
                android:text="@string/bus_line_detail_hint"
                style="@style/bus_line_detail_hint_two"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/bus_line_detail_interval"/>

            <LinearLayout
                style="@style/bus_line_detail_ll">
                <ImageView
                    style="@style/aspect_both_wrap"
                    android:src="@mipmap/bus_gray"
                    android:layout_margin="@dimen/default_padding"
                    />
                <TextView
                    style="@style/bus_line_detail_hint"
                    android:text="@string/bus_line_detail_number_hint"
                    />
                <TextView
                    android:id="@+id/tv_bus_line_number"
                    style="@style/bus_line_detail_txt"
                    />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/bus_line_detail_interval"/>
            <LinearLayout
                style="@style/bus_line_detail_ll">
                <ImageView
                    style="@style/aspect_both_wrap"
                    android:src="@mipmap/bus_ticket"
                    android:layout_margin="@dimen/default_padding"
                    />
                <TextView
                    style="@style/bus_line_detail_hint"
                    android:text="@string/bus_line_detail_prace_hint"
                    />
                <TextView
                    android:id="@+id/tv_bus_line_prace"
                    style="@style/bus_line_detail_txt"
                    />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/bus_line_detail_interval"/>
            <LinearLayout
                style="@style/bus_line_detail_ll">
                <ImageView
                    style="@style/aspect_both_wrap"
                    android:src="@mipmap/bus_time"
                    android:layout_margin="@dimen/default_padding"
                    />
                <TextView
                    style="@style/bus_line_detail_hint"
                    android:text="@string/bus_line_detail_time_hint"
                    />
                <TextView
                    android:id="@+id/tv_bus_line_time"
                    style="@style/bus_line_detail_txt"
                    />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_padding"
            android:paddingLeft="@dimen/default_padding"
            android:orientation="vertical"
            android:background="@color/white">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingRight="@dimen/default_padding"
                android:background="@color/white"
                >
                <TextView
                    android:text="@string/bus_line_detail_all_station"
                    style="@style/bus_line_detail_hint_two"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    />
                <ImageView
                    android:id="@+id/iv_map"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_map"
                    android:layout_gravity="center"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/bus_line_detail_interval"/>
            <com.yurc.customerbus.view.ListViewForScrollView
                android:id="@+id/lv_bus_station"
                android:layout_marginBottom="@dimen/default_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                />
        </LinearLayout>
    </LinearLayout>
    </ScrollView>
</LinearLayout>