<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <RelativeLayout
        style="@style/actionbar_default"
        >
        <TextView
            style="@style/actionbar_title"
            android:text="@string/home_title"/>
        <LinearLayout
            android:id="@+id/ll_city"
            style="@style/actionbar_right"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_city"
                style="@style/actionbar_city_right"
                android:text=""/>
            <ImageView
                style="@style/aspect_both_wrap"
                android:src="@mipmap/bus_select"
                />
        </LinearLayout>
    </RelativeLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/home_ad"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >
        <RelativeLayout
            android:id="@+id/rl_surround_bus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <LinearLayout
                android:orientation="vertical"
                style="@style/aspect_both_wrap"
                android:layout_centerInParent="true"
                >
                <TextView
                    style="@style/home_grid_title"
                    android:text="@string/home_surround"
                    />
                <ImageView
                    style="@style/aspect_both_wrap"
                    android:layout_gravity="center"
                    android:background="@mipmap/home_surround"/>
            </LinearLayout>
        </RelativeLayout>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/home_interval" />
        <RelativeLayout
            android:id="@+id/rl_line_bus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <LinearLayout
                android:orientation="vertical"
                style="@style/aspect_both_wrap"
                android:layout_centerInParent="true"
                >
                <TextView
                    style="@style/home_grid_title"
                    android:text="@string/home_line"
                    />
                <ImageView
                    style="@style/aspect_both_wrap"
                    android:layout_gravity="center"
                    android:background="@mipmap/home_line"/>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/home_interval" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >
        <RelativeLayout
            android:id="@+id/rl_station_bus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            >
            <LinearLayout
                android:orientation="vertical"
                style="@style/aspect_both_wrap"
                android:layout_centerInParent="true"
                android:paddingBottom="@dimen/default_padding">
                <TextView
                    style="@style/home_grid_title"
                    android:text="@string/home_site"
                    />
                <ImageView
                    style="@style/aspect_both_wrap"
                    android:layout_gravity="center"
                    android:background="@mipmap/home_site"/>
            </LinearLayout>
        </RelativeLayout>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/home_interval" />
        <RelativeLayout
            android:id="@+id/rl_transfer_bus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <LinearLayout
                android:orientation="vertical"
                style="@style/aspect_both_wrap"
                android:layout_centerInParent="true"
                android:paddingBottom="@dimen/default_padding"
                >
                <TextView
                    style="@style/home_grid_title"
                    android:text="@string/home_transfer"
                    />
                <ImageView
                    style="@style/aspect_both_wrap"
                    android:layout_gravity="center"
                    android:background="@mipmap/home_transfer"/>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>