<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        style="@style/actionbar_default">
        <ImageView
            android:id="@+id/iv_back"
            style="@style/actionbar_left"
            android:src="@drawable/btn_actionbar_back"/>
        <TextView
            style="@style/actionbar_title"
            android:text="@string/bus_station_query_title"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        android:layout_marginTop="@dimen/default_padding"
        android:gravity="center"
        >
        <EditText
            android:id="@+id/et_bus_station_name"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding"
            android:singleLine="true"
            android:background="@color/white"
            android:textSize="@dimen/font_l"
            android:hint="@string/bus_station_query_et_hint"/>
        <ImageView
            android:id="@+id/iv_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding"
            android:src="@mipmap/search_icon"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginTop="@dimen/default_padding"
        android:paddingLeft="@dimen/default_padding"
        android:orientation="vertical">
        <ListView
            android:id="@+id/lv_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/surround_bus_background"
            />
        <LinearLayout
            android:id="@+id/ll_del"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/white"
            android:padding="@dimen/default_padding"
            android:gravity="center">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:src="@mipmap/del_icon"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="@dimen/default_padding"
                android:text="@string/busline_query_del_hint"
                android:textSize="@dimen/font_l"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>