<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/surround_bus_background">

    <RelativeLayout
        style="@style/actionbar_default">
        <ImageView
            android:id="@+id/iv_back"
            style="@style/actionbar_left"
            android:src="@drawable/btn_actionbar_back"/>
        <TextView
            style="@style/actionbar_title"
            android:text="@string/bus_transfer_detail_title"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/default_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/default_padding"
        android:background="@color/white">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/default_padding"
            android:text="@string/bus_transfer_detail_hint"
            android:textColor="@color/bus_line_detail_text"
            android:textSize="@dimen/font_l"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/home_interval"
            />

        <TextView
            android:id="@+id/tv_bus_lines"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/font_l"
            android:paddingTop="@dimen/default_padding"
            />
        <TextView
            android:id="@+id/tv_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/bus_line_detail_text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/default_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="@dimen/default_padding"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingRight="@dimen/default_padding"
            android:background="@color/white"
            >
            <TextView
                android:text="@string/bus_transfer_detail_hint_two"
                style="@style/bus_line_detail_hint_two"
                android:layout_width="0dp"
                android:layout_weight="1"
                />
            <ImageView
                android:id="@+id/iv_map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_map"
                android:layout_gravity="center"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/home_interval"
            />
        <ListView
            android:id="@+id/lv_transfer"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
</LinearLayout>